[tool.poetry]
name = "knste-docs"
version = "1.0.0"
description = "KNSTE docs"
authors = ["Charlotte Skye <char@lotte.tf>"]
license = "CC-BY-SA-4.0"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.2.1"
sphinx_py3doc_enhanced_theme = "^2.4.0"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
