[tool.poetry]
name = "tinlok-docs"
version = "1.0.0"
description = "Tinlok docs"
authors = ["Lura Skye Revuwution <l@veriny.tf>"]
license = "CC-BY-SA-4.0"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
